[gd_scene load_steps=52 format=3 uid="uid://b5vowrw45hndi"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_6vypi"]
[ext_resource type="Texture2D" uid="uid://ftcrveq2n7hh" path="res://Sprites/Artem/artem_v1_front_walking-spritesheet.png" id="2_he7ll"]
[ext_resource type="FontFile" uid="uid://du58gfnyy5wpj" path="res://Game Components/fonts/Silver.ttf" id="3_8eknr"]
[ext_resource type="Texture2D" uid="uid://belgwwqvl7of1" path="res://Sprites/Artem/artem_v1_side-spritesheet.png" id="3_85di3"]
[ext_resource type="Texture2D" uid="uid://bhx6u3r52bon6" path="res://Sprites/Artem/artem_v1_front_idle-spritesheet.png" id="3_8155j"]
[ext_resource type="Texture2D" uid="uid://cp6dyn170ab6v" path="res://Sprites/Artem/artem_v1_back_idle.png" id="4_oipig"]
[ext_resource type="Script" path="res://Game Components/UI_Elements/pause/PauseController.gd" id="4_wdihw"]
[ext_resource type="Script" path="res://Game Components/UI_Elements/character screen/character_info.gd" id="5_2ad3x"]
[ext_resource type="Texture2D" uid="uid://b4dgg37yjp405" path="res://Sprites/Artem/artem_v1_side_walking-spritesheet.png" id="5_d4qgt"]
[ext_resource type="LabelSettings" uid="uid://b8gkxf5wk0pdu" path="res://scenes/character_info.tres" id="6_68dct"]
[ext_resource type="Theme" uid="uid://vo18d0emeivc" path="res://themes/progress_bar.tres" id="7_hot2h"]
[ext_resource type="Texture2D" uid="uid://dv7hntw3bi4xl" path="res://Sprites/Artem/artem_v1_back_walking.png" id="7_wkoaj"]
[ext_resource type="Texture2D" uid="uid://b0kmobajmfp4n" path="res://Sprites/textures/rainfall.png" id="8_v2vqm"]
[ext_resource type="PackedScene" uid="uid://2of3o36sd6rq" path="res://Game Components/Inventory/inventory_GUI.tscn" id="13_cjqps"]
[ext_resource type="Theme" uid="uid://c1pntnyw8t772" path="res://themes/hp_bar.tres" id="13_i42rr"]
[ext_resource type="PackedScene" uid="uid://5v2qsot5igdu" path="res://Game Components/UI_Elements/quest log components/quest_log.tscn" id="14_xc3j5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h5msp"]
atlas = ExtResource("2_he7ll")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg8ut"]
atlas = ExtResource("2_he7ll")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x28u8"]
atlas = ExtResource("3_8155j")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhb6t"]
atlas = ExtResource("3_8155j")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p7ut"]
atlas = ExtResource("3_85di3")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ooxtj"]
atlas = ExtResource("3_85di3")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x31r3"]
atlas = ExtResource("5_d4qgt")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x8j4"]
atlas = ExtResource("5_d4qgt")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c43u"]
atlas = ExtResource("5_d4qgt")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rb1y"]
atlas = ExtResource("5_d4qgt")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0c5cf"]
atlas = ExtResource("4_oipig")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkrwi"]
atlas = ExtResource("4_oipig")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bljnv"]
atlas = ExtResource("7_wkoaj")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxdpc"]
atlas = ExtResource("7_wkoaj")
region = Rect2(32, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_lrcab"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5msp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg8ut")
}],
"loop": true,
"name": &"down_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x28u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhb6t")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p7ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooxtj")
}],
"loop": true,
"name": &"side_idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x31r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x8j4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c43u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rb1y")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0c5cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkrwi")
}],
"loop": true,
"name": &"up_idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bljnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxdpc")
}],
"loop": true,
"name": &"up_walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rq8f3"]
radius = 8.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dfod3"]
radius = 24.0
height = 48.0

[sub_resource type="LabelSettings" id="LabelSettings_g0to7"]
font = ExtResource("3_8eknr")
font_size = 27
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5kijb"]
font = ExtResource("3_8eknr")
font_size = 45
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_id3q7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jwn3v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hda07"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yee7k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_murlt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ko8y8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ge5j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_am72b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7bfq3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_raacs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wm4at"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3xgl1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jkbq4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h0l2v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5nw3a"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8mi52"]
emission_shape = 3
emission_box_extents = Vector3(700, 1, 1)
particle_flag_align_y = true
particle_flag_disable_z = true
gravity = Vector3(-30, 200, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
angle_min = -229.5
angle_max = -208.6
scale_min = 0.5
scale_max = 0.55
color = Color(1, 0.917647, 1, 0.45098)

[node name="player" type="CharacterBody2D"]
position = Vector2(16, -16)
script = ExtResource("1_6vypi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lrcab")
animation = &"down_walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 16)
shape = SubResource("CapsuleShape2D_rq8f3")

[node name="interactionComponents" type="Node2D" parent="."]

[node name="interactionArea" type="Area2D" parent="interactionComponents"]
position = Vector2(0, 8)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactionComponents/interactionArea"]
shape = SubResource("CapsuleShape2D_dfod3")

[node name="itemLabel" type="Label" parent="interactionComponents/interactionArea"]
z_index = 2
offset_left = -285.0
offset_top = -50.0
offset_right = 280.0
offset_bottom = -16.0
theme_override_fonts/font = ExtResource("3_8eknr")
theme_override_font_sizes/font_size = 19
label_settings = SubResource("LabelSettings_g0to7")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HUD" type="Control" parent="."]
light_mask = 0
z_index = 99
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Camera2D" type="Camera2D" parent="HUD"]
y_sort_enabled = true
position = Vector2(0, 8)
zoom = Vector2(2.4, 2.4)
limit_left = -20000000
limit_top = -1863462912
limit_right = 2000000
limit_bottom = 20000000
editor_draw_limits = true

[node name="PauseController" type="Node2D" parent="HUD"]
process_mode = 3
z_index = 1
script = ExtResource("4_wdihw")

[node name="pause_text" type="Label" parent="HUD/PauseController"]
offset_left = -284.0
offset_top = -58.0
offset_right = 285.0
offset_bottom = -7.0
label_settings = SubResource("LabelSettings_5kijb")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="character_info" type="Node2D" parent="HUD"]
z_index = 2
y_sort_enabled = true
position = Vector2(32, 16)
script = ExtResource("5_2ad3x")

[node name="ColorRect" type="ColorRect" parent="HUD/character_info"]
light_mask = 0
offset_left = -432.0
offset_top = -232.0
offset_right = -152.0
offset_bottom = 248.0
color = Color(0.0352941, 0.145098, 0.501961, 1)
metadata/_edit_use_anchors_ = true

[node name="gold" type="Label" parent="HUD/character_info"]
offset_left = -256.0
offset_top = -224.0
offset_right = -163.0
offset_bottom = -190.0
label_settings = ExtResource("6_68dct")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="current level" type="Label" parent="HUD/character_info"]
offset_left = -424.0
offset_top = -224.0
offset_right = -331.0
offset_bottom = -190.0
label_settings = ExtResource("6_68dct")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="cHUB" type="Control" parent="HUD/character_info"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="XPBar" type="ProgressBar" parent="HUD/character_info/cHUB"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 1
anchors_preset = -1
anchor_top = -0.125
anchor_bottom = -0.125
offset_left = -424.0
offset_top = -184.0
offset_right = -160.0
offset_bottom = -142.0
theme = ExtResource("7_hot2h")
theme_override_constants/outline_size = 0
step = 1.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="HUD/character_info/cHUB/XPBar"]
layout_mode = 0
offset_left = 8.0
offset_top = -16.0
offset_right = 48.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("3_8eknr")
theme_override_font_sizes/font_size = 38
text = "XP"

[node name="HPBar" type="ProgressBar" parent="HUD/character_info/cHUB"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.875
anchor_bottom = 0.875
offset_left = -424.0
offset_top = -184.0
offset_right = -160.0
offset_bottom = -142.0
theme = ExtResource("13_i42rr")
step = 1.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="HUD/character_info/cHUB/HPBar"]
layout_mode = 0
offset_left = 8.0
offset_top = -16.0
offset_right = 48.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("3_8eknr")
theme_override_font_sizes/font_size = 38
text = "HP
"
metadata/_edit_use_anchors_ = true

[node name="Rest" type="Button" parent="HUD/character_info"]
offset_left = -320.0
offset_top = -224.0
offset_right = -256.0
offset_bottom = -192.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_8eknr")
theme_override_font_sizes/font_size = 19
theme_override_styles/normal = SubResource("StyleBoxEmpty_id3q7")
text = "Rest"
metadata/_edit_use_anchors_ = true

[node name="Inventory" parent="HUD/character_info" instance=ExtResource("13_cjqps")]
z_index = 100
offset_left = -420.0
offset_top = -60.0
offset_right = -364.0
offset_bottom = -20.0
metadata/_edit_use_anchors_ = true

[node name="show_inv" type="Button" parent="HUD/character_info"]
offset_left = -416.0
offset_top = -92.0
offset_right = -333.0
offset_bottom = -61.0
theme = ExtResource("13_i42rr")
theme_override_fonts/font = ExtResource("3_8eknr")
theme_override_font_sizes/font_size = 19
theme_override_styles/normal = SubResource("StyleBoxEmpty_jwn3v")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hda07")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yee7k")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_murlt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ko8y8")
text = "Inventory
"

[node name="inv_indicate" type="Label" parent="HUD/character_info/show_inv"]
layout_mode = 0
offset_left = 4.00003
offset_top = 6.00002
offset_right = 44.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("3_8eknr")
theme_override_font_sizes/font_size = 19
text = "*"
label_settings = ExtResource("6_68dct")

[node name="show_q" type="Button" parent="HUD/character_info"]
offset_left = -328.0
offset_top = -92.0
offset_right = -242.0
offset_bottom = -61.0
theme_override_fonts/font = ExtResource("3_8eknr")
theme_override_font_sizes/font_size = 19
theme_override_styles/normal = SubResource("StyleBoxEmpty_1ge5j")
theme_override_styles/hover = SubResource("StyleBoxEmpty_am72b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7bfq3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_raacs")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wm4at")
text = "Quest Log"

[node name="q_indicate" type="Label" parent="HUD/character_info/show_q"]
visible = false
layout_mode = 0
offset_left = 4.00003
offset_top = 6.00002
offset_right = 44.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("3_8eknr")
theme_override_font_sizes/font_size = 19
text = "*"
label_settings = ExtResource("6_68dct")

[node name="quest_log" parent="HUD/character_info" instance=ExtResource("14_xc3j5")]
visible = false
offset_left = -420.0
offset_top = -112.0
offset_right = -420.0
offset_bottom = -112.0

[node name="shop" type="Node2D" parent="HUD"]
visible = false

[node name="ColorRect" type="ColorRect" parent="HUD/shop"]
offset_left = -160.0
offset_top = -120.0
offset_right = 160.0
offset_bottom = 120.0
color = Color(0.490196, 0, 0.490196, 1)

[node name="buy" type="Node2D" parent="HUD/shop/ColorRect"]

[node name="BuyButton" type="Button" parent="HUD/shop/ColorRect/buy"]
offset_right = 40.0
offset_bottom = 24.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_3xgl1")
flat = true

[node name="BuyLabel" type="Label" parent="HUD/shop/ColorRect/buy/BuyButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("3_8eknr")
theme_override_font_sizes/font_size = 19
text = "Buy"
horizontal_alignment = 1

[node name="BuyIndicate" type="ColorRect" parent="HUD/shop/ColorRect/buy/BuyButton"]
visible = false
layout_mode = 0
offset_top = 24.0
offset_right = 40.0
offset_bottom = 32.0

[node name="item" type="Button" parent="HUD/shop/ColorRect/buy"]
offset_left = 120.0
offset_top = 64.0
offset_right = 160.0
offset_bottom = 85.0
theme_override_fonts/font = ExtResource("3_8eknr")
theme_override_font_sizes/font_size = 19
theme_override_styles/normal = SubResource("StyleBoxEmpty_jkbq4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h0l2v")
text = "Buy"

[node name="itemlabel" type="RichTextLabel" parent="HUD/shop/ColorRect/buy/item"]
layout_mode = 0
offset_left = -112.0
offset_right = -16.0
offset_bottom = 16.0
theme_override_fonts/normal_font = ExtResource("3_8eknr")
theme_override_font_sizes/normal_font_size = 19
text = "Health Restore"
scroll_active = false

[node name="costLabel" type="RichTextLabel" parent="HUD/shop/ColorRect/buy/item"]
layout_mode = 0
offset_left = -16.0
offset_bottom = 16.0
theme_override_fonts/normal_font = ExtResource("3_8eknr")
theme_override_font_sizes/normal_font_size = 19
text = "5g"
scroll_active = false

[node name="sell" type="Node2D" parent="HUD/shop/ColorRect"]

[node name="SellButton" type="Button" parent="HUD/shop/ColorRect/sell"]
offset_left = 40.0
offset_right = 80.0
offset_bottom = 24.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_5nw3a")
flat = true

[node name="SellLabel" type="Label" parent="HUD/shop/ColorRect/sell/SellButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("3_8eknr")
theme_override_font_sizes/font_size = 19
text = "Sell"
horizontal_alignment = 1

[node name="SellIndicate" type="ColorRect" parent="HUD/shop/ColorRect/sell/SellButton"]
visible = false
layout_mode = 0
offset_top = 24.0
offset_right = 40.0
offset_bottom = 32.0

[node name="Weather" type="GPUParticles2D" parent="."]
z_index = 1
position = Vector2(32, -312)
amount = 250
process_material = SubResource("ParticleProcessMaterial_8mi52")
texture = ExtResource("8_v2vqm")
lifetime = 2.75
preprocess = 4.0
speed_scale = 1.5
fixed_fps = 144

[node name="voice" type="AudioStreamPlayer" parent="."]

[connection signal="area_entered" from="interactionComponents/interactionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="interactionComponents/interactionArea" to="." method="_on_interaction_area_area_exited"]
[connection signal="pressed" from="HUD/character_info/Rest" to="." method="_on_rest_pressed"]
[connection signal="pressed" from="HUD/character_info/show_inv" to="." method="_on_show_inv_pressed"]
[connection signal="pressed" from="HUD/character_info/show_q" to="." method="_on_show_q_pressed"]
[connection signal="pressed" from="HUD/shop/ColorRect/buy/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="HUD/shop/ColorRect/buy/item" to="." method="_on_item_pressed"]
[connection signal="pressed" from="HUD/shop/ColorRect/sell/SellButton" to="." method="_on_sell_button_pressed"]
